BE: Implement tenant schema isolation
